--- a/JavaApplication1/src/quanlyhocvien/view/ThongTinCuTheLopJFrame.form
+++ b/JavaApplication1/src/quanlyhocvien/view/ThongTinCuTheLopJFrame.form
@@ -67,7 +67,9 @@
                   <Component id="jLabelSearch" min="-2" pref="108" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jtf_search" min="-2" pref="241" max="-2" attributes="0"/>
-                  <EmptySpace pref="501" max="32767" attributes="0"/>
+                  <EmptySpace pref="369" max="32767" attributes="0"/>
+                  <Component id="btn_print" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                   <Component id="btn_add" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -97,6 +99,7 @@
                       <Component id="jLabelSearch" alignment="3" max="32767" attributes="0"/>
                       <Component id="jtf_search" alignment="3" max="32767" attributes="0"/>
                       <Component id="btn_add" alignment="3" pref="41" max="32767" attributes="0"/>
+                      <Component id="btn_print" alignment="3" pref="41" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="jpn_view" min="-2" max="-2" attributes="0"/>
@@ -204,6 +207,24 @@
             </DimensionLayout>
           </Layout>
         </Container>
+        <Component class="javax.swing.JButton" name="btn_print">
+          <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="50" green="af" red="4c" type="rgb"/>
+            </Property>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Liberation Sans" size="18" style="0"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+            </Property>
+            <Property name="actionCommand" type="java.lang.String" value="+Xu&#x1ea5;t file"/>
+            <Property name="label" type="java.lang.String" value="+Xu&#x1ea5;t file"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_printActionPerformed"/>
+          </Events>
+        </Component>
       </SubComponents>
     </Container>
   </SubComponents>
